--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div style="color;">
-        <p title="Toolkit">This Project is made by Team akatsuki Under the leader of Reaper</p>
+        <p title="Toolkit">This Project is made by Team akatsuki Under the leadership of Reaper</p>
     </div>
 </body>
 </html>
